--- a/ELeMel/View/Views/FrontPage/RestaurantPage/DetailPage/RestaurantInfoUIView.xib
+++ b/ELeMel/View/Views/FrontPage/RestaurantPage/DetailPage/RestaurantInfoUIView.xib
@@ -7,7 +7,15 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RestaurantInfoUIView" customModule="ELeMel" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RestaurantInfoUIView" customModule="ELeMel" customModuleProvider="target">
+            <connections>
+                <outlet property="address" destination="hoP-nr-bNs" id="wzq-zJ-qWC"/>
+                <outlet property="category" destination="Av2-Vn-HDS" id="QCP-eY-BhX"/>
+                <outlet property="openTime" destination="xuj-Ry-xlB" id="q1l-xJ-7bC"/>
+                <outlet property="phoneNumber" destination="wjG-On-EEW" id="upb-v5-I2f"/>
+                <outlet property="restaurantName" destination="ZQ9-SM-qf6" id="Qhy-ez-C1d"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Sam-Il-09Y" customClass="RestaurantInfoUIView" customModule="ELeMel" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
@@ -16,16 +24,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BeA-50-ha7">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="158"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="yabo" translatesAutoresizingMaskIntoConstraints="NO" id="4cm-cE-JJb">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4cm-cE-JJb">
                             <rect key="frame" x="8" y="68" width="70" height="70"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="绝味鸭脖logo" translatesAutoresizingMaskIntoConstraints="NO" id="3hv-af-fUb">
-                            <rect key="frame" x="86" y="68" width="70" height="70"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="yabo" translatesAutoresizingMaskIntoConstraints="NO" id="14U-lN-5nO">
-                            <rect key="frame" x="164" y="68" width="70" height="70"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="商家信息" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceT-Nr-M75">
@@ -92,7 +92,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="柳州市和平路一区1-2-1号" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hoP-nr-bNs">
-                                    <rect key="frame" x="163" y="19" width="233" height="18"/>
+                                    <rect key="frame" x="133" y="19" width="258" height="18"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="textColor"/>
@@ -112,9 +112,9 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="110" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjG-On-EEW">
-                                    <rect key="frame" x="221" y="18" width="165" height="21"/>
+                                    <rect key="frame" x="221" y="18" width="167" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -132,9 +132,9 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="8:00-20:30" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuj-Ry-xlB">
-                                    <rect key="frame" x="215" y="18" width="182" height="21"/>
+                                    <rect key="frame" x="215" y="18" width="173" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -214,7 +214,5 @@
     </objects>
     <resources>
         <image name="chevron.right" catalog="system" width="96" height="128"/>
-        <image name="yabo" width="698" height="416"/>
-        <image name="绝味鸭脖logo" width="80" height="80"/>
     </resources>
 </document>
