--- a/ELeMel/View/Views/FrontPage/RestaurantPage/RestaurantInfoCardUIView.xib
+++ b/ELeMel/View/Views/FrontPage/RestaurantPage/RestaurantInfoCardUIView.xib
@@ -6,7 +6,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RestaurantInfoCardUIView" customModule="ELeMel" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RestaurantInfoCardUIView" customModule="ELeMel" customModuleProvider="target">
+            <connections>
+                <outlet property="icon" destination="cnt-iO-oXF" id="Bxs-Yw-yMR"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="8jJ-ef-2H5" customClass="RestaurantInfoCardUIView" customModule="ELeMel" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
