完成订单创建和查询功能

--- a/ELeMel/Base.lproj/Main.storyboard
+++ b/ELeMel/Base.lproj/Main.storyboard
@@ -132,74 +132,6 @@
             <point key="canvasLocation" x="25" y="1359"/>
         </scene>
         <!--订单-->
-        <scene sceneID="Wdw-3U-mqe">
-            <objects>
-                <tableViewController id="mGg-OP-pB2" customClass="OrderFormPageTableViewController" customModule="ELeMel" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JXW-JI-Md8">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="iqv-x2-P80">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iqv-x2-P80" id="96g-Je-m3c">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="mGg-OP-pB2" id="WgU-Cg-Nq4"/>
-                            <outlet property="delegate" destination="mGg-OP-pB2" id="gC4-mA-WtP"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="订单" id="sUe-E0-7uE"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UoI-pc-dw7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1038" y="665"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Cqi-Nf-Jcd">
-            <objects>
-                <navigationController id="uhG-VT-ZXu" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9vO-Qe-5cQ">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aZW-fy-E4m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2416" y="861"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="LDC-eQ-jVR">
-            <objects>
-                <viewController id="FGR-k8-bcb" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4Ja-kf-0V5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xP0-wY-6gD">
-                                <rect key="frame" x="0.0" y="145" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="6nb-wD-Rhy">
-                                        <barButtonItem key="rightBarButtonItem" title="Item" image="arrow.left" catalog="system" id="9xm-mk-Hfh"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="bdA-pV-X5e"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MTP-Qy-e7K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1786" y="772"/>
-        </scene>
-        <!--订单-->
         <scene sceneID="LBy-ar-H5Q">
             <objects>
                 <navigationController id="LQ4-CI-Thi" customClass="OrderFormPageNavigationViewController" customModule="ELeMel" customModuleProvider="target" sceneMemberID="viewController">
@@ -209,12 +141,32 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="mGg-OP-pB2" kind="relationship" relationship="rootViewController" id="kYW-QM-xqn"/>
+                        <segue destination="fD5-AT-s5e" kind="relationship" relationship="rootViewController" id="gOm-tY-di8"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jgd-Ol-hB8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="25" y="665"/>
+        </scene>
+        <!--我的订单-->
+        <scene sceneID="cxm-1X-amg">
+            <objects>
+                <viewController id="fD5-AT-s5e" customClass="OrderListViewController" customModule="ELeMel" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zKh-rc-Of8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Ng1-n3-tbs"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="我的订单" id="aPv-G5-njw">
+                        <barButtonItem key="rightBarButtonItem" title="其他订单" id="GBd-BZ-eEC">
+                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DkO-un-y65" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1038" y="665"/>
         </scene>
         <!--发现-->
         <scene sceneID="4nj-fL-2tD">
@@ -252,7 +204,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="doc.text" catalog="system" width="115" height="128"/>
         <image name="house" catalog="system" width="128" height="110"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
