--- a/ELeMel/View/Views/FrontPage/ShopCart/ShopCartUIView.xib
+++ b/ELeMel/View/Views/FrontPage/ShopCart/ShopCartUIView.xib
@@ -8,6 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShopCartUIView" customModule="ELeMel" customModuleProvider="target">
             <connections>
+                <outlet property="shopCartImage" destination="7ic-Yw-mJV" id="JTZ-63-oFd"/>
                 <outlet property="totalPriceLabel" destination="4DT-dA-FUN" id="CBn-SB-PtR"/>
             </connections>
         </placeholder>
@@ -34,10 +35,6 @@
                     <color key="textColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="yabo" translatesAutoresizingMaskIntoConstraints="NO" id="7ic-Yw-mJV">
-                    <rect key="frame" x="17" y="3" width="45" height="45"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="¥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssJ-sF-q9k">
                     <rect key="frame" x="118" y="6" width="11" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -52,6 +49,10 @@
                     <color key="textColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="shopcart" translatesAutoresizingMaskIntoConstraints="NO" id="7ic-Yw-mJV">
+                    <rect key="frame" x="13" y="11" width="62" height="59"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
             <nil key="simulatedTopBarMetrics"/>
@@ -61,6 +62,6 @@
         </view>
     </objects>
     <resources>
-        <image name="yabo" width="698" height="416"/>
+        <image name="shopcart" width="250" height="250"/>
     </resources>
 </document>
